fixed user searchbar spacing

--- a/public/css/user.css
+++ b/public/css/user.css
@@ -477,3 +477,6 @@ ul {
     list-style-type: none;
 }
 
+.action-buttons {
+    margin-left: 0px;
+}
